--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,6 @@ h2 {
     background: none #ff962b;
     color: #ffffff;
     box-shadow: -1px 6px 13px rgba(255, 150, 43, 0.35)
-    
 }
 
 .bg-success {
@@ -168,7 +167,7 @@ h2 {
     color: darkgray
 }
 
-.fa  {
+.fa {
     color: rgb(255, 255, 255);
     margin-right: 10px;
 }
@@ -198,6 +197,7 @@ h2 {
     .thumb-sec {
         max-width: 200px
     }
+
 }
 
 .inner-gallery {
@@ -234,12 +234,71 @@ footer {
     color: #fff
 }
 
-.text-tam{
+.text-tam {
     font-size: 1.5em;
     font-weight: 800;
 }
 
-.card-img-top{
-    background-color: rgb(252, 249, 249);
+.card-img-top {
+    background-color: rgb(255, 255, 255);
     margin-bottom: 20px;
+    
+}
+
+.navbar-brand {
+    font-weight: 500;
+}
+
+.wcf-prod {
+    width: 45%;
+}
+
+.wcf-price {
+    width: 12%;
+}
+
+.wcf-cant {
+    width: 12%;
+}
+
+.wcf-total {
+    width: 12%;
+}
+
+.wcf-delete {
+    width: 19%;
+}
+
+.tam-total {
+    font-size: 1.3em;
+    font-weight: 800;
+
+}
+
+.new-hr {
+    border: 1px solid rgb(230, 232, 230);
+    -webkit-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+}
+
+
+p {
+   overflow: hidden;
+   text-overflow: ellipsis;
+   display: -webkit-box;
+   line-height: 16px;     /* fallback */
+   max-height: 82px;      /* fallback */
+   -webkit-line-clamp: 2; /* number of lines to show */
+   -webkit-box-orient: vertical;
+   margin-top: 25px;
+   margin-bottom: 55px;
+}
+
+.card-title{
+    font-weight: 800;
+}
+
+img{
+    border-radius: 10px;
 }
